--- a/manifest.json
+++ b/manifest.json
@@ -8,15 +8,15 @@
     "activeTab"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["scripts/background.js"],
     "persistent": false
   },
   "browser_action": {
     "default_title": "DJI Forums Enhancer",
-    "default_popup": "settings.html"
+    "default_popup": "html/settings.html"
   },
   "options_ui": {
-    "page": "settings.html",
+    "page": "html/settings.html",
     "open_in_tab": false
   }
 }
