--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,6 +11,13 @@
     "scripts": ["scripts/background.js"],
     "persistent": false
   },
+  "content_scripts": [
+    {
+      "matches": ["https://forum.dji.com/*"],
+      "js": ["scripts/content.js"],
+      "run_at": "document_idle"
+    }
+  ],
   "browser_action": {
     "default_title": "DJI Forums Enhancer",
     "default_popup": "html/settings.html"
