--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,8 +13,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://forum.dji.com/*"],
-      "js": ["scripts/content.js"],
+      "matches": ["*://forum.dji.com/*"],
+      "js": ["scripts/distance_converter.js"],
       "run_at": "document_idle"
     }
   ],
