--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,11 @@
 {
   "manifest_version": 2,
   "name": "DJI Forums Enhancer",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Enhances the DJI Forums experience",
+  "icons": {
+    "128": "icon128.png"
+  },
   "permissions": [
     "storage",
     "activeTab"
